Some leftover renames
--HG--
branch : dev

--- a/Views/AdditionalResources.cshtml
+++ b/Views/AdditionalResources.cshtml
@@ -9,7 +9,7 @@
 @{
     Script.Include("navigation-fix.js").AtFoot();
 
-    Style.Include("~/Themes/OrchardHUN.Theme.English/Scripts/google-code-prettify/prettify.css");
+    Style.Include("~/Themes/Lombiq.OrchardCommunityTheme/Scripts/google-code-prettify/prettify.css");
     Script.Include("google-code-prettify/prettify.js").AtFoot();
 
     @Display.CustomResources();
