Migrating property id too

--- a/Views/Analytics.cshtml
+++ b/Views/Analytics.cshtml
@@ -1,7 +1,7 @@
-﻿<script async src="https://www.googletagmanager.com/gtag/js?id=UA-29656992-10"></script>
+﻿<script async src="https://www.googletagmanager.com/gtag/js?id=G-46Q45ZHZJ1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'UA-29656992-10', { 'cookie_domain': 'orchardproject.hu' });
+    gtag('config', 'G-46Q45ZHZJ1', { 'cookie_domain': 'orchardproject.hu' });
 </script>
